--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ chrono = {version = "0.4.41", features = ["serde"] }
 anyhow = "1.0.99"
 clap = { version="4.5.47", features = ["derive"] }
 async-trait = "0.1.89"
+tokio = { version = "1.47.1", features = ["full"] }
